maven and claude synchronization